[gd_scene load_steps=2 format=3 uid="uid://ithsv7k5oj44"]

[ext_resource type="Script" path="res://tutorial/tutorial_sequence.gd" id="1_2x1av"]

[node name="TutorialSequence" type="Node3D"]
script = ExtResource("1_2x1av")

[node name="TutorialAudio" type="AudioStreamPlayer3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
current = true

[node name="PauseTimer" type="Timer" parent="."]

[node name="TutorialAudioBis" type="AudioStreamPlayer3D" parent="."]

[connection signal="finished" from="TutorialAudio" to="." method="_on_audio_stream_player_3d_finished"]
